# GitDecomposer

./: .gitignore  ADVANCED_METRICS_GUIDE.md  IMPLEMENTATION_STATUS.md  MANIFEST.in  Makefile  README.md  debug_advanced_reports.py  debug_analyzers.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup.sh  test_bus_factor.html  test_knowledge.html  validate_improvements.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  FEATURES.md  GitComposer-Class-Level.png:Zone.Identifier  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  README.md  architecture.puml
enhanced_analytics_export/: branch_statistics.csv  bug_fix_analysis.csv  code_churn_analysis.csv  commit_frequency.csv  commit_size_analysis.csv  commit_velocity.csv  contributor_statistics.csv  file_change_frequency.csv  file_extensions.csv  file_hotspots.csv  maintainability_analysis.csv  most_changed_files.csv  technical_debt_analysis.csv  test_coverage_analysis.csv
examples/: README.md  advanced_analysis.py  advanced_metrics_demo.py  advanced_reporting_demo.py  basic_analysis.py  comprehensive_advanced_analysis.py  comprehensive_analysis.py  enhanced_analytics.py  test_enhanced_analytics.py
gitdecomposer/: __init__.py  __main__.py  advanced_metrics.py  branch_analyzer.py  cli.py  commit_analyzer.py  contributor_analyzer.py  file_analyzer.py  git_metrics.py  git_repository.py  visualization_engine.py
gitdecomposer/analyzers/: __init__.py  advanced_metrics.py  branch_analyzer.py  commit_analyzer.py  contributor_analyzer.py  file_analyzer.py  legacy_advanced_metrics.py
gitdecomposer/analyzers/advanced_metrics/: README.md  __init__.py  base.py  branch_lifecycle_analyzer.py  bus_factor_analyzer.py  critical_file_analyzer.py  cycle_time_analyzer.py  flow_efficiency_analyzer.py  knowledge_distribution_analyzer.py  single_point_failure_analyzer.py  velocity_trend_analyzer.py
gitdecomposer/core/: __init__.py  git_repository.py
gitdecomposer/models/: __init__.py  analysis.py  branch.py  commit.py  contributor.py  file.py  metrics.py  repository.py
gitdecomposer/services/: __init__.py  advanced_analytics.py  advanced_report_generator.py  dashboard_generator.py  data_aggregator.py  export_service.py  report_generator.py
gitdecomposer/viz/: __init__.py  visualization_engine.py
gitdecomposer/viz/plots/: __init__.py  base.py  commit.py  commit_old.py  contributor.py  factory.py  file.py  file_backup.py  file_new.py  index_page.py  technical_debt.py
scripts/: build_and_check.sh  check_lint.sh  fix_lint.sh  fix_lint_advanced.sh
tests/: run_final_tests.sh  run_tests.py  run_tests.sh  test_advanced_metrics.py  test_analyzers_final.py  test_dashboard_generator.py  test_dashboard_generator_complex.py  test_data_aggregator.py  test_export_service.py  test_gitdecomposer.py  test_report_generator.py  test_service_integration.py
tests/analyzers/advanced_metrics/: __init__.py  run_tests.py  test_bus_factor_analyzer.py  test_critical_file_analyzer.py  test_flow_efficiency_analyzer.py  test_knowledge_distribution_analyzer.py  test_velocity_trend_analyzer.py
